New files added - [] Files modified - [ManageForms.js,ManageForms.html,ManageForms.css,ManageForms.variables.json,CXGlobalSettings.js,CXGlobalSettings.html,DataEntry.html,DataEntry.variables.json,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -6,9 +6,9 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn1" padding="2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn1" padding="2% 10%">
                         <wm-liveform novalidate="false" errormessage="" title="Global Settings" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.Cx2GlobalSettingsData.dataSet" captionalign="left" captionposition="top" name="liveformGlobalSettings"
-                        formdata="bind:Variables.DefaultData.firstRecord" class="btn">
+                        formdata="bind:Variables.DefaultData.firstRecord">
                             <wm-layoutgrid columns="1" name="layoutgrid2">
                                 <wm-gridrow name="gridrow3">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
