--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -56,7 +56,7 @@
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                 <wm-grid-action key="customButton" display-name="Add Employee" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Employee" action="customButtonAction($event);Widgets.dialogAddEmployeeORAdmin.open()"
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-delete" title="Remove" action="Variables.RemoveEmployee.invoke()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove" action="Variables.RemoveEmployee.invoke()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -66,44 +66,20 @@
                             <wm-tabpane name="tabpane4" title="Admins">
                                 <wm-layoutgrid name="layoutgrid6_1">
                                     <wm-gridrow name="gridrow18_1">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn30_1">
-                                            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.GetAdminRolesForMunicipality.dataSet" navigation="Classic" name="livelist1" title="Admin List">
-                                                <wm-listtemplate layout="media" name="listtemplate1">
-                                                    <wm-container class="media-left media-top" name="container2" width="20%" horizontalalign="center">
-                                                        <wm-picture name="Picture" class="media-object" width="100pt" height="100pt" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.livelist1.currentItem.ID+&quot;/content/photo&quot;"></wm-picture>
-                                                    </wm-container>
-                                                    <wm-container class="media-body" padding="unset 1.5em unset 1.25em" name="container3">
-                                                        <wm-label class="pull-left" caption="bind:Variables.GetAdminRolesForMunicipality.dataSet.FirstName+&quot; &quot;+Variables.GetAdminRolesForMunicipality.dataSet.LastName" name="Name" margin="0em unset 0.5em unset"
-                                                        fontsize="1.143" fontunit="em"></wm-label>
-                                                        <wm-label caption="bind:Variables.GetAdminRolesForMunicipality.dataSet.Email" name="Description" class="p text-muted"></wm-label>
-                                                        <wm-layoutgrid name="layoutgrid3">
-                                                            <wm-gridrow name="gridrow10_1">
-                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn23_1">
-                                                                    <wm-label padding="unset 0.5em" name="label19_1" caption="bind:Variables.GetAdminRolesForMunicipality.dataSet[$i].Address1+&quot;, &quot;+Variables.GetAdminRolesForMunicipality.dataSet[$i].Address2"></wm-label>
-                                                                </wm-gridcolumn>
-                                                            </wm-gridrow>
-                                                            <wm-gridrow name="gridrow11_1">
-                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn25_1">
-                                                                    <wm-label padding="unset 0.5em" name="label20_1" caption="bind:Variables.GetAdminRolesForMunicipality.dataSet[$i].City"></wm-label>
-                                                                </wm-gridcolumn>
-                                                            </wm-gridrow>
-                                                            <wm-gridrow name="gridrow12">
-                                                                <wm-gridcolumn columnwidth="12" name="gridcolumn27_1">
-                                                                    <wm-label padding="unset 0.5em" name="label21_1" caption="bind:&quot;Contact: &quot;+Variables.GetAdminRolesForMunicipality.dataSet[$i].PhoneNumber"></wm-label>
-                                                                </wm-gridcolumn>
-                                                            </wm-gridrow>
-                                                        </wm-layoutgrid>
-                                                    </wm-container>
-                                                    <wm-container class="media-right" horizontalalign="right" padding="unset 1em unset unset" name="container4" width="20%">
-                                                        <wm-button class="btn-default btn-primary" caption="Remove" type="button" margin="2em 0.5em 1em 0.5em" name="buttonDelete" on-click="Variables.RemoveAdmin.invoke()" iconclass="wi wi-delete"></wm-button>
-                                                    </wm-container>
-                                                </wm-listtemplate>
-                                            </wm-livelist>
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn30_1" horizontalalign="right" padding="1em unset">
+                                            <wm-button class="btn-default btn-primary" caption="AddAdmin" type="button" margin="unset 0.5em" iconclass="wi wi-add" on-click="buttonAddAdminClick($event, $scope);Widgets.dialogAddEmployeeORAdmin.open()" name="buttonAddAdmin"></wm-button>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow19_1">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn32" horizontalalign="right">
-                                            <wm-button class="btn-default btn-primary" caption="AddAdmin" type="button" margin="unset 0.5em" iconclass="wi wi-add" on-click="buttonAddAdminClick($event, $scope);Widgets.dialogAddEmployeeORAdmin.open()" name="buttonAddAdmin"></wm-button>
+                                            <wm-grid title="" dataset="bind:Variables.GetAdminRolesForMunicipality.dataSet" navigation="Classic" name="grid5" filtermode="multicolumn">
+                                                <wm-grid-column binding="FirstName" caption="First Name" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
+                                                <wm-grid-column binding="LastName" caption="Last Name" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
+                                                <wm-grid-column binding="Email" caption="Email" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
+                                                <wm-grid-column binding="PhoneNumber" caption="Phone Number" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
+                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="" action="Variables.RemoveAdmin.invoke()" disabled="false"></wm-grid-row-action>
+                                            </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
