New files added - [] Files modified - [CXGlobalSettings.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -12,7 +12,7 @@
                             <wm-layoutgrid columns="1" name="layoutgrid2">
                                 <wm-gridrow name="gridrow3">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                                        <wm-form-field name="technologyFee" displayname="Technology Fee" show="true" primary-key="false" generator="assigned" key="technologyFee" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="technologyFee" displayname="Technology Fee" show="true" primary-key="false" generator="assigned" key="technologyFee" type="float" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow4">
@@ -48,11 +48,16 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn12">
-                                        <wm-form-field name="cxwebsite" displayname="Website" show="true" primary-key="false" generator="assigned" key="cxwebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="cxpostalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="cxpostalCode" type="string" widget="text" maxchars="255"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn13">
+                                        <wm-form-field name="cxwebsite" displayname="Website" show="true" primary-key="false" generator="assigned" key="cxwebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow1">
+                                    <wm-gridcolumn name="gridcolumn1" columnwidth="12">
                                         <wm-form-field name="cxemail" displayname="Email" show="true" primary-key="false" generator="assigned" key="cxemail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
