New files added - [] Files modified - [MunicipalityUsers.html,MunicipalityUsers.js,Login.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -40,7 +40,7 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow6">
                                             <wm-gridcolumn columnwidth="7" name="gridcolumn14" class="col-xs-7">
-                                                <wm-checkbox caption="Remember me" name="remembermecheck"></wm-checkbox>
+                                                <wm-checkbox caption="Remember Me" name="remembermecheck"></wm-checkbox>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="5" name="gridcolumn15" padding="1.15em unset 1em unset" horizontalalign="right" class="col-xs-5">
                                                 <wm-anchor name="anchor1" caption="Forgot Password?" on-click="Variables.goToPage_ForgotPassword.invoke()"></wm-anchor>
